Refactor: split SDN controller socket into IP and Port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=firmnet
 
-spring.datasource.url=jdbc:mysql://localhost:3306/firmnet?createDatabaseIfNotExist=true
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://<database_ip:<database_port>/firmnet?createDatabaseIfNotExist=true
+spring.datasource.username=<database_user>
+spring.datasource.password=<database_password>
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-sdn-controller.socket=
+sdn.controller.ip=<controller_ip>
+sdn.controller.port=<controller_port>
